--- a/src/app/components/management/manage-list/manage-list.component.scss
+++ b/src/app/components/management/manage-list/manage-list.component.scss
@@ -10,8 +10,8 @@
 }
 
 .scroll-container {
+  position: relative;
   display: flex;
   flex-direction: column;
-  max-height: 78vh;
-  overflow: auto;
+  overflow-y: scroll;
 }
