--- a/src/app/components/list/consolidated-view/consolidated-view.component.html
+++ b/src/app/components/list/consolidated-view/consolidated-view.component.html
@@ -9,7 +9,7 @@
       </mat-expansion-panel-header>
       <div *ngFor="let header of category.headers">
         <h4>{{ header.name }}</h4>
-        <app-check-list [header]="header"></app-check-list>
+        <app-check-list [header]="header" [fromConsol]="true"></app-check-list>
       </div>
 
       <!-- <mat-accordion multi="true" displayMode='flat'>
