--- a/src/app/components/management/manage-item/manage-item.component.html
+++ b/src/app/components/management/manage-item/manage-item.component.html
@@ -23,8 +23,7 @@
 
     <div #scrollzone class='scroll-container'>
       <mat-nav-list>
-        <a mat-list-item *ngFor="let item of items" [routerLink]="['/Manage/EditItem', header.id, item.id]">{{ item.text
-          }}</a>
+        <a mat-list-item *ngFor="let item of items" [routerLink]="['/Manage/EditItem', header.id, item.id]"><span [innerHtml]="getLinkText(item)"></span></a>
       </mat-nav-list>
     </div>
   </div>
