--- a/src/app/components/main-nav/main-nav.component.html
+++ b/src/app/components/main-nav/main-nav.component.html
@@ -50,7 +50,7 @@
           <button type="button" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
             <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
           </button>
-          <span><b>Lister 0.3s</b>&nbsp;<sup style='font-size: 8pt;'>by JFG</sup></span>
+          <span><b>Lister 0.4c</b>&nbsp;<sup style='font-size: 8pt;'>by JFG</sup></span>
         </div>
 
         <div fxFlex="20" fxLayoutAlign="center center" class='cat-name'>
