--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,6 +67,11 @@ body {
   font-weight: bold;
 }
 
+.err-mess {
+  font-style: italic;
+  color: red;
+  font-size: smaller;
+}
 
 /************************
  Theming section
