--- a/src/app/components/management/manage-category/manage-category.component.html
+++ b/src/app/components/management/manage-category/manage-category.component.html
@@ -10,7 +10,11 @@
             <mat-form-field class='cpc'>
               <mat-label>Category name</mat-label>
               <input name="txtListName" matInput type="text" [(ngModel)]="categoryName">
+              <div class='err-mess' *ngIf="errorMessage !== ''">{{ errorMessage }}</div>
             </mat-form-field>
+            <!-- <div class='err-mess' *ngIf="errorMessage !== ''">
+              {{ errorMessage }}
+            </div> -->
           </div>
           <div fxFlex="15">
             <button mat-icon-button type="button" (click)="onDeleteCategory()">
@@ -43,7 +47,7 @@
       <mat-nav-list>
         <a mat-list-item [ngClass]="{'fb': category.isDefault}" *ngFor="let category of sortedCategories"
           (click)="onCategoryClick(category)">
-          {{ category.name }}
+          {{ category.text }}
         </a>
       </mat-nav-list>
     </div>
