--- a/src/app/components/management/manage-item/edit-item/edit-item.component.html
+++ b/src/app/components/management/manage-item/edit-item/edit-item.component.html
@@ -1,5 +1,5 @@
 <div class='pad10'>
-  <mat-card-title>{{ verb }} item for <b>{{ header.name }}</b></mat-card-title>
+  <mat-card-title>{{ verb }} item for <b>{{ header.text }}</b></mat-card-title>
 
   <form (submit)="formSubmitted($event)">
 
@@ -8,7 +8,7 @@
 
       <mat-select placeholder="Current List" name="curlist" [(ngModel)]="header.id">
         <mat-option *ngFor="let header of allHeaders" [value]="header.id">
-          {{ header.name }}
+          {{ header.text }}
         </mat-option>
       </mat-select>
     </mat-form-field>
@@ -18,6 +18,7 @@
         <mat-form-field class="cpc">
           <mat-label>Item text</mat-label>
           <input name="txtItemText" matInput type="text" [(ngModel)]="item.text">
+          <div class='err-mess' *ngIf="errorMessage !== ''">{{ errorMessage }}</div>
         </mat-form-field>
       </div>
       <div fxFlex="15">
