--- a/src/app/components/management/manage-list/manage-list.component.html
+++ b/src/app/components/management/manage-list/manage-list.component.html
@@ -7,6 +7,7 @@
       <mat-form-field style='width: 150px;'>
         <mat-label>List name</mat-label>
         <input name="txtListName" matInput type="text" [(ngModel)]="listName">
+        <div class='err-mess' *ngIf="errorMessage !== ''">{{ errorMessage }}</div>
       </mat-form-field>
       &nbsp;<button mat-raised-button color="primary" [disabled]="listName===''">Add</button>&nbsp;
       <button mat-raised-button color="accent" type="button" (click)="toggleFormVisibility()">
@@ -21,7 +22,7 @@
       <mat-form-field class='' *ngIf="categories">
         <mat-select placeholder="Category" name="category" (selectionChange)="onCategorySelected($event)" [(ngModel)]="selectedCategoryId">
           <mat-option *ngFor="let cat of sortedCategories" [value]="cat.id">
-            {{ cat.name }}
+            {{ cat.text }}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -32,7 +33,7 @@
     <div #scrollzone class='scroll-container'>
       <mat-nav-list>
         <a mat-list-item *ngFor="let header of sortedHeaders" [routerLink]="['/Manage/ManageItem', header.id]">
-          {{ header.name }} {{ itemCount(header.id) }}
+          {{ header.text }} {{ itemCount(header.id) }}
         </a>
       </mat-nav-list>
     </div>
