--- a/src/app/components/main-nav/main-nav.component.html
+++ b/src/app/components/main-nav/main-nav.component.html
@@ -44,8 +44,6 @@
           </mat-expansion-panel>
         </mat-accordion>
 
-
-        <!-- <button mat-menu-item (click)="changeTheme(drawer)">{{ nextTheme }}</button> -->
       </div>
 
       <div *ngIf="!(isHandset$ | async)">
@@ -65,7 +63,7 @@
           <button type="button" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
             <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
           </button>
-          <span><b>Lister 0.5a</b>&nbsp;<sup style='font-size: 8pt;'>by JFG</sup></span>
+          <span><b>Lister 0.5b</b>&nbsp;<sup style='font-size: 8pt;'>by JFG</sup></span>
         </div>
 
         <div fxFlex="30" fxLayoutAlign="center center" class='cat-name'>
