--- a/src/app/components/list/check-list/check-list.component.scss
+++ b/src/app/components/list/check-list/check-list.component.scss
@@ -3,8 +3,8 @@
 }
 
 .my-pad {
-  padding-left: 5px !important;
-  padding-top: 5px !important;
+  padding-left: 0 !important;
+  padding-top: 0 !important;
 }
 
 .scroll-container {
