--- a/src/app/components/list/consolidated-view/consolidated-view.component.scss
+++ b/src/app/components/list/consolidated-view/consolidated-view.component.scss
@@ -5,3 +5,17 @@
   left: auto;
 }
 
+.header-lnk {
+  display: block;
+  font-size: 14pt;
+  padding-top: 15px;
+  padding-bottom: 10px;
+  text-decoration: none;
+}
+
+@mixin header-lnk-theme($theme) {
+  $foreground: map-get($theme, foreground);
+  .header-lnk {
+    color: mat-color($foreground, text) !important;
+  }
+}
