--- a/src/app/components/list/liste-menu/liste-menu.component.html
+++ b/src/app/components/list/liste-menu/liste-menu.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group #tabgroup *ngIf="loaded">
+<mat-tab-group #tabgroup *ngIf="loaded" [selectedIndex]="tabIndex">
 
   <mat-tab *ngFor="let header of sortedHeaders()">
 
