--- a/src/app/components/list/consolidated-view/consolidated-view.component.html
+++ b/src/app/components/list/consolidated-view/consolidated-view.component.html
@@ -1,10 +1,10 @@
-<div *ngIf="cleaned">
+<div *ngIf="cleaned" class="pc-consol">
 
   <mat-accordion multi="true" displayMode='flat' class="cpc">
     <mat-expansion-panel *ngFor="let category of categories" [expanded]="category.isDefault" class="mat-elevation-z0">
 
       <mat-expansion-panel-header collapsedHeight="20" expandedHeight="20">
-        <mat-panel-title>
+        <mat-panel-title class='my-panel-header-title'>
           {{ category.text }}
         </mat-panel-title>
       </mat-expansion-panel-header>
@@ -20,6 +20,7 @@
             </button>
           </div>
         </div>
+
         <mat-menu #menu="matMenu">
           <div class='mini-menu'>
             <div fxLayoutAlign="center center" class='fb'>{{ header.text }}</div>
