--- a/src/app/components/list/consolidated-view/consolidated-view.component.scss
+++ b/src/app/components/list/consolidated-view/consolidated-view.component.scss
@@ -29,6 +29,6 @@
   padding: 5px;
 }
 
-.mat-menu-panel {
-  background-color: 'red' !important;
+.my-panel-header-title {
+  font-size: 20px !important;
 }
