--- a/src/app/components/list/liste-menu/liste-menu.component.html
+++ b/src/app/components/list/liste-menu/liste-menu.component.html
@@ -1,17 +1,51 @@
-<mat-tab-group #tabgroup *ngIf="loaded" [selectedIndex]="tabIndex">
+<div *ngIf="loaded">
 
-  <mat-tab *ngFor="let header of sortedHeaders()">
+  <mat-tab-group #tabgroup [selectedIndex]="tabIndex" *ngIf="!isQuick">
 
-    <ng-template mat-tab-label>
-      {{ header.text }}
-    </ng-template>
+    <mat-tab *ngFor="let header of sortedHeaders()">
 
-    <app-check-list [header]="header" [fromConsol]="false" (itemClicked)="onItemClicked($event)"></app-check-list>
+      <ng-template mat-tab-label>
+        {{ header.text }}
+      </ng-template>
+
+      <app-check-list [header]="header" [fromConsol]="false" (itemClicked)="onItemClicked($event)"></app-check-list>
+
+      <mat-toolbar class='pos-bottom cpc'>
+        <app-quick-add class="cpc" [idHeader]="header.id" (itemAdded)="onItemAdded($event)"></app-quick-add>
+      </mat-toolbar>
+
+    </mat-tab>
+
+  </mat-tab-group>
+
+  <div *ngIf="isQuick">
+
+    <div class="quick-title">
+      <div fxLayout="row">
+        <div fxFlex="90" fxFlexFill fxLayoutAlign="start center">
+          {{ headers[0].text }}
+        </div>
+        <div fxFlex="10" fxLayoutAlign="end center">
+          <mat-icon *ngIf="nbChekedItems(headers[0]) > 0" [matMenuTriggerFor]="menu">more_vert</mat-icon>
+        </div>
+
+        <mat-menu #menu="matMenu">
+          <div class='mini-menu'>
+            <div fxLayoutAlign="center center" class='fb'>{{ headers[0].text }}</div>
+            <!-- <button *ngIf="isListHaveDone(header)" mat-menu-item (click)="removeDone(header)">Remove Done</button> -->
+          </div>
+        </mat-menu>
+
+      </div>
+    </div>
+    <mat-divider></mat-divider>
+    <div class="pad10">
+      <app-check-list [header]="headers[0]" [fromConsol]="false" (itemClicked)="onItemClicked($event)"></app-check-list>
+    </div>
 
     <mat-toolbar class='pos-bottom cpc'>
-      <app-quick-add class="cpc" [idHeader]="header.id" (itemAdded)="onItemAdded($event)"></app-quick-add>
+      <app-quick-add class="cpc" [idHeader]="headers[0].id" (itemAdded)="onItemAdded($event)"></app-quick-add>
     </mat-toolbar>
 
-  </mat-tab>
-
-</mat-tab-group>
+  </div>
+</div>
