--- a/src/app/components/list/check-item/check-item.component.scss
+++ b/src/app/components/list/check-item/check-item.component.scss
@@ -16,3 +16,7 @@
 .mat-checkbox-anim-checked-unchecked {
   transform: scale(var(--my-scale));
 }
+
+.striked-text {
+  text-decoration: line-through;
+}
