--- a/src/app/components/list/check-list/check-list.component.html
+++ b/src/app/components/list/check-list/check-list.component.html
@@ -1,5 +1,5 @@
 <div class='scroll-container pad10' #scrollzone1>
   <div *ngFor="let item of sortedItems" class='pad10 my-pad'>
-    <app-check-item [item]="item" (checkChange)="onCheckChange()"></app-check-item>
+    <app-check-item [item]="item" [isQuick]="isQuick" (checkChange)="onCheckChange()"></app-check-item>
   </div>
 </div>
