--- a/src/app/components/management/manage-item/manage-item.component.html
+++ b/src/app/components/management/manage-item/manage-item.component.html
@@ -23,7 +23,10 @@
 
     <div #scrollzone class='scroll-container'>
       <mat-nav-list>
-        <a mat-list-item *ngFor="let item of items" [routerLink]="['/Manage/EditItem', header.id, item.id]"><span [innerHtml]="getLinkText(item)"></span></a>
+        <a mat-list-item *ngFor="let item of items" [routerLink]="['/Manage/EditItem', header.id, item.id]">
+          {{ item.text }}
+          <span class='ghost-text'>&nbsp;{{ getSubText(item) }}</span>
+        </a>
       </mat-nav-list>
     </div>
   </div>
