--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,10 @@ body {
   text-align: right;
 }
 
+.tac {
+  text-align: center;
+}
+
 .cpc {
   width: 100%;
 }
@@ -76,6 +80,11 @@ body {
 .mart10 {
   margin-top: 10px;
 }
+
+.mart20 {
+  margin-top: 20px;
+}
+
 /************************
  Theming section
  From: https://medium.com/@PhilippKief/automatic-dark-mode-detection-in-angular-material-8342917885a0
