--- a/src/app/components/main-nav/main-nav.component.scss
+++ b/src/app/components/main-nav/main-nav.component.scss
@@ -20,6 +20,10 @@
   font-size: 10pt;
 }
 
+.small-font {
+  font-size: 11px;
+}
+
 @mixin sidenav-theme($theme) {
   $primary: map-get($theme, primary);
   $warn: map-get($theme, warn);
