--- a/src/app/components/list/consolidated-view/consolidated-view.component.scss
+++ b/src/app/components/list/consolidated-view/consolidated-view.component.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 .refresh-fab {
   position: fixed;
   right: 20px;
@@ -19,7 +20,7 @@
 @mixin header-lnk-theme($theme) {
   $foreground: map-get($theme, foreground);
   .header-lnk {
-    color: mat-color($foreground, text) !important;
+    color: mat.get-color-from-palette($foreground, text) !important;
   }
 }
 
