--- a/src/app/components/list/quick-add/quick-add.component.scss
+++ b/src/app/components/list/quick-add/quick-add.component.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 .quick-div {
   font-size: 11pt !important;
 }
@@ -13,7 +14,7 @@
 @mixin quick-input-theme($theme) {
   $foreground: map-get($theme, foreground);
   .quick-input {
-    color: mat-color($foreground, text);
-    border-bottom-color: mat-color($foreground, text);
+    color: mat.get-color-from-palette($foreground, text);
+    border-bottom-color: mat.get-color-from-palette($foreground, text);
   }
 }
