--- a/src/app/components/main-nav/main-nav.component.scss
+++ b/src/app/components/main-nav/main-nav.component.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 .sidenav-container {
   height: 100%;
 }
@@ -39,8 +40,8 @@
   }
 
   .sidenav-header {
-    background: mat-color($primary, darker);
-    color: mat-color($primary, default-contrast);
+    background: mat.get-color-from-palette($primary, darker);
+    color: mat.get-color-from-palette($primary, default-contrast);
     position: relative;
     height: 5rem;
 
@@ -72,7 +73,7 @@
             float: left;
             line-height: 2.7rem;
             padding-right: 1rem;
-            color: mat-color($foreground, text);
+            color: mat.get-color-from-palette($foreground, text);
           }
         }
       }
