--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
 
 
@@ -5,8 +6,7 @@
  Theming related includes
 ************************/
 
-@import '~@angular/material/theming';
-@include mat-core();
+@include mat.core();
 
 
 /************************
@@ -103,23 +103,23 @@ body {
 }
 
 // Light theme
-$light-primary: mat-palette($mat-indigo);
-$light-accent:  mat-palette($mat-pink, A200, A100, A400);
-$light-theme:   mat-light-theme($light-primary, $light-accent);
+$light-primary: mat.define-palette(mat.$indigo-palette);
+$light-accent:  mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$light-theme:   mat.define-light-theme($light-primary, $light-accent);
 
 .light-theme {
-  @include angular-material-theme($light-theme);
+  @include mat.all-component-themes($light-theme);
   @include custom-components-theme($light-theme);
 }
 
 // Dark theme
-$dark-primary: mat-palette($mat-blue-grey);
-$dark-accent:  mat-palette($mat-amber, A200, A100, A400);
-$dark-warn:    mat-palette($mat-deep-orange);
-$dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
+$dark-primary: mat.define-palette(mat.$blue-grey-palette);
+$dark-accent:  mat.define-palette(mat.$amber-palette, A200, A100, A400);
+$dark-warn:    mat.define-palette(mat.$deep-orange-palette);
+$dark-theme:   mat.define-dark-theme($dark-primary, $dark-accent, $dark-warn);
 
 .dark-theme {
-  @include angular-material-theme($dark-theme);
+  @include mat.all-component-themes($dark-theme);
   @include custom-components-theme($dark-theme);
 }
 
