--- a/src/app/components/list/check-list/check-list.component.scss
+++ b/src/app/components/list/check-list/check-list.component.scss
@@ -14,9 +14,10 @@
   overflow-y: scroll;
   min-height: 100%;
 }
-
+.marge-50 {
+  margin-bottom: 50px;
+}
 .drag-placeholder {
   border-bottom: dotted 3px #999;
-  //min-height: 30px;
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
