--- a/src/app/components/list/liste-menu/liste-menu.component.html
+++ b/src/app/components/list/liste-menu/liste-menu.component.html
@@ -36,7 +36,7 @@
 
         <mat-menu #menu="matMenu">
           <div class='mini-menu'>
-            <div fxLayoutAlign="center center" class='fb'>{{ headers[0].text }}</div>
+            <div fxLayoutAlign='center center' class='fb'>{{ headers[0].text }}</div>
             <button mat-menu-item (click)="confirmCompletedRemoval(headers[0])">Remove Completed</button>
           </div>
         </mat-menu>
