--- a/src/app/components/list/quick-add/quick-add.component.scss
+++ b/src/app/components/list/quick-add/quick-add.component.scss
@@ -10,6 +10,10 @@
   background-color: transparent;
 }
 
+.nobr {
+  white-space: nowrap;
+}
+
 @mixin quick-input-theme($theme) {
   $foreground: map-get($theme, foreground);
   .quick-input {
