--- a/src/app/components/list/quick-add/quick-add.component.html
+++ b/src/app/components/list/quick-add/quick-add.component.html
@@ -1,5 +1,5 @@
 <div class='quick-div' fxLayout='row' fxLayoutAlign="center center">
-  <span>Quick add</span>&nbsp;
+  <span class='nobr'>Quick add</span>&nbsp;
   <input class='quick-input' name="txtItemText" type="text" [(ngModel)]="quickText">
   <button mat-icon-button color="primary" type="button" (click)="onAddClick()">
     <mat-icon>add_circle_outline</mat-icon>
