--- a/src/app/components/list/liste-menu/liste-menu.component.html
+++ b/src/app/components/list/liste-menu/liste-menu.component.html
@@ -1,27 +1,11 @@
 <div *ngIf="loaded">
-  <ng-container *ngIf="!isQuick">
+  <div *ngIf="!isQuick">
     <app-header-menu (selected)="headerSelected($event)" [listHeaders]="sortedHeaders()" [selectedIdHeader]="selectedIdHeader"></app-header-menu>
     <app-check-list [header]="header" [fromConsol]="false" (itemClicked)="onItemClicked($event)"></app-check-list>
     <mat-toolbar class='pos-bottom cpc'>
       <app-quick-add class="cpc" [idHeader]="header.id" (itemAdded)="onItemAdded($event)"></app-quick-add>
     </mat-toolbar>
-  </ng-container>
-  <!-- <mat-tab-group #tabgroup [selectedIndex]="tabIndex" *ngIf="!isQuick">
-
-    <mat-tab *ngFor="let header of sortedHeaders()">
-
-      <ng-template mat-tab-label>
-        {{ header.text }}
-      </ng-template>
-
-
-      <mat-toolbar class='pos-bottom cpc'>
-        <app-quick-add class="cpc" [idHeader]="header.id" (itemAdded)="onItemAdded($event)"></app-quick-add>
-      </mat-toolbar>
-
-    </mat-tab>
-
-  </mat-tab-group> -->
+  </div>
 
   <div *ngIf="isQuick">
 
@@ -43,7 +27,9 @@
 
       </div>
     </div>
+
     <mat-divider></mat-divider>
+
     <div class="pad10">
       <app-check-list [header]="headers[0]" [isQuick]="true" [fromConsol]="false" (itemClicked)="onItemClicked($event)">
       </app-check-list>
