--- a/src/app/components/list/liste-menu/liste-menu.component.html
+++ b/src/app/components/list/liste-menu/liste-menu.component.html
@@ -1,7 +1,10 @@
-<div *ngIf="loaded">
-  <div *ngIf="!isQuick">
+<div *ngIf="loaded" fxFill>
+
+  <div *ngIf="!isQuick" fxFill fxLayout='column' >
+    <div  fxFlex='56px'>
     <app-header-menu (selected)="headerSelected($event)" [listHeaders]="sortedHeaders()" [selectedIdHeader]="selectedIdHeader"></app-header-menu>
-     <div (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')">
+    </div>
+    <div fxFlex (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')">
       <app-check-list [header]="header" [fromConsol]="false" (itemClicked)="onItemClicked($event)"></app-check-list>
     </div>
     <mat-toolbar class='pos-bottom cpc'>
